[gd_scene load_steps=15 format=3 uid="uid://d0jqkvtuhnup7"]

[ext_resource type="PackedScene" uid="uid://dq3k1gmfnaxit" path="res://Core/Gameplay/SpawnPoint.tscn" id="1_nr2y3"]
[ext_resource type="Script" uid="uid://cy8awcvjolqo" path="res://Maps/LastManLevels/LastMan1.gd" id="1_xbxkw"]
[ext_resource type="PackedScene" uid="uid://b8lytvha5krpa" path="res://Core/Gameplay/LevelTeleporter.tscn" id="2_xbxkw"]
[ext_resource type="PackedScene" uid="uid://cmu6iryj00p8w" path="res://Assets/Environment/GameShow/Obstacles/SpinningRing_10m/SpinningRing_10m.tscn" id="3_butgl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s06he"]
size = Vector3(1000, 10, 1000)

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_ldiov"]
rayleigh_color = Color(0.137575, 0.200307, 0.317419, 1)
mie_eccentricity = 0.99
mie_color = Color(0.7958, 0.822937, 0.880384, 1)

[sub_resource type="Sky" id="Sky_kb0kb"]
sky_material = SubResource("PhysicalSkyMaterial_ldiov")

[sub_resource type="Environment" id="Environment_5xgs0"]
background_mode = 2
sky = SubResource("Sky_kb0kb")
ambient_light_source = 3
tonemap_mode = 4
ssr_enabled = true
ssao_enabled = true
glow_enabled = true
glow_intensity = 0.05
glow_strength = 0.49
volumetric_fog_density = 0.0001
volumetric_fog_albedo = Color(0.895052, 0.995096, 0.976932, 1)

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_djnc1"]
dof_blur_far_enabled = true
dof_blur_far_distance = 50.0
dof_blur_amount = 0.01

[sub_resource type="CylinderMesh" id="CylinderMesh_xbxkw"]
top_radius = 1.5
bottom_radius = 2.0
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1i3dp"]
albedo_color = Color(0.099986, 0.099986, 0.099986, 1)
roughness = 0.3

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xbxkw"]
height = 0.5
radius = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_nr2y3"]
size = Vector3(3, 0.5, 3)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_nr2y3"]
data = PackedVector3Array(-1.5, 0.25, 1.5, 1.5, 0.25, 1.5, -1.5, -0.25, 1.5, 1.5, 0.25, 1.5, 1.5, -0.25, 1.5, -1.5, -0.25, 1.5, 1.5, 0.25, -1.5, -1.5, 0.25, -1.5, 1.5, -0.25, -1.5, -1.5, 0.25, -1.5, -1.5, -0.25, -1.5, 1.5, -0.25, -1.5, 1.5, 0.25, 1.5, 1.5, 0.25, -1.5, 1.5, -0.25, 1.5, 1.5, 0.25, -1.5, 1.5, -0.25, -1.5, 1.5, -0.25, 1.5, -1.5, 0.25, -1.5, -1.5, 0.25, 1.5, -1.5, -0.25, -1.5, -1.5, 0.25, 1.5, -1.5, -0.25, 1.5, -1.5, -0.25, -1.5, 1.5, 0.25, 1.5, -1.5, 0.25, 1.5, 1.5, 0.25, -1.5, -1.5, 0.25, 1.5, -1.5, 0.25, -1.5, 1.5, 0.25, -1.5, -1.5, -0.25, 1.5, 1.5, -0.25, 1.5, -1.5, -0.25, -1.5, 1.5, -0.25, 1.5, 1.5, -0.25, -1.5, -1.5, -0.25, -1.5)

[node name="LastMan1" type="Node3D" node_paths=PackedStringArray("player_spawn_points", "default_level_camera")]
script = ExtResource("1_xbxkw")
game_mode_type = 3
player_spawn_points = NodePath("SpawnPoints")
default_level_camera = NodePath("DefaultLevelCamera")

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="SpawnPoint2" parent="SpawnPoints" instance=ExtResource("1_nr2y3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 10)

[node name="SpawnPoint7" parent="SpawnPoints" instance=ExtResource("1_nr2y3")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10, 0, 6)

[node name="SpawnPoint" parent="SpawnPoints" instance=ExtResource("1_nr2y3")]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, -4, 0, -3)

[node name="SpawnPoint8" parent="SpawnPoints" instance=ExtResource("1_nr2y3")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -10, 0, 6)

[node name="SpawnPoint3" parent="SpawnPoints" instance=ExtResource("1_nr2y3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 10)

[node name="SpawnPoint6" parent="SpawnPoints" instance=ExtResource("1_nr2y3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 11)

[node name="SpawnPoint4" parent="SpawnPoints" instance=ExtResource("1_nr2y3")]
transform = Transform3D(-2.08616e-07, 0, 1, 0, 1, 0, -1, 0, -2.08616e-07, 4, 0, -3)

[node name="SpawnPoint5" parent="SpawnPoints" instance=ExtResource("1_nr2y3")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -7)

[node name="DefaultLevelCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="KillBoxArea3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -25, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="KillBoxArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.3, 0)
shape = SubResource("BoxShape3D_s06he")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -20)
text = "SUMO!
(Last player on the platform wins!)"
font_size = 128

[node name="EnvironmentAndAtmosphere" type="Node3D" parent="."]

[node name="ReflectionProbe" type="ReflectionProbe" parent="EnvironmentAndAtmosphere"]
size = Vector3(30, 30, 30)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="EnvironmentAndAtmosphere"]
transform = Transform3D(0.490524, -0.713526, 0.500266, 0, 0.574077, 0.818802, -0.871428, -0.401641, 0.281598, 0, 4.18616, 6)
light_color = Color(0.977318, 0.916539, 0.885586, 1)
light_energy = 10.0
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="EnvironmentAndAtmosphere"]
environment = SubResource("Environment_5xgs0")
camera_attributes = SubResource("CameraAttributesPractical_djnc1")

[node name="Environment" type="Node3D" parent="."]

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 11)
mesh = SubResource("CylinderMesh_xbxkw")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_1i3dp")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/MeshInstance3D6"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/MeshInstance3D6/StaticBody3D"]
shape = SubResource("CylinderShape3D_xbxkw")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 16.75, 14)
mesh = SubResource("BoxMesh_nr2y3")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_1i3dp")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/MeshInstance3D2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/MeshInstance3D2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_nr2y3")

[node name="Ring" parent="Environment" instance=ExtResource("3_butgl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="Ring2" parent="Environment" instance=ExtResource("3_butgl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 6)

[node name="Ring3" parent="Environment" instance=ExtResource("3_butgl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 6)

[node name="LevelTeleporter" parent="." instance=ExtResource("2_xbxkw")]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, -14, 17, 14)
label_name = "HUB"
scene_path = "res://Maps/HUBLevel/HUBLevel.tscn"

[node name="StartTimerLabel3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -20)
text = "10"
font_size = 128

[node name="GamePreStartTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 30.0
one_shot = true

[node name="GameStartTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 30.0
one_shot = true

[connection signal="body_entered" from="KillBoxArea3D" to="." method="_on_kill_box_area_3d_body_entered"]
